# beckhoff_testbed

./: README.md
beckhoff_testbed_description/: CMakeLists.txt  package.xml
beckhoff_testbed_description/config/: ethercat_utils_config.yaml  ros2_controller_config.yaml
beckhoff_testbed_description/config/ethercat/: EL1859_ethercat_config.yaml  EL3201.yaml  EL3201_ethercat_config.yaml  EL3351_ethercat_config.yaml  EL7037.yaml  EL7037_ethercat_config.yaml  EL7201_ethercat_config.yaml
beckhoff_testbed_description/config/ethercat/autogenerated/: EL1859.xml  EL1859.yaml  EL3201.xml  EL3351.xml  EL3351.yaml  EL7037.xml  EL7201.yaml  el7201.xml
beckhoff_testbed_description/launch/: start.launch.py
beckhoff_testbed_description/urdf/: GPIO_ros2_control.xacro  el1859_ros2_control.xacro  el3201_ros2_control.xacro  el3351_ros2_control.xacro  el7037_ros2_control.xacro  el7201_ros2_control.xacro  ethercat_ros2_control.xacro  main.xacro
test_scripts/: brushless.py  brushless_state_machine.py  cia402gui.py  publish_commands.py
